secureqm/secureqm-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: secureqm
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: secureqm-ibm-mq
    app.kubernetes.io/name: ibm-mq
  ports:
    - name: mq
      protocol: TCP
      port: 1414
      targetPort: 1414
    - name: webui
      protocol: TCP
      port: 9443
      targetPort: 9443
