secureqm/secureqm-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: secureqm-tls-route
spec:
  host: secureqmchl.chl.mq.ibm.com
  to:
    kind: Service
    name: secureqm-ibm-mq
  port:
    targetPort: 1414
  tls:
    termination: passthrough
